--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;900&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>The Solo Chef</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
