Add Recipe Page Added

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,14 @@
     <title>The Solo Chef</title>
   </head>
   <body>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqbLerDrOh-vIDxwU1ruiiyj18ofW2zVE&libraries=places"></script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
+
+    
+
   </body>
 </html>
